--- a/resources/ui/widget/templates/RtcGitConnector.html
+++ b/resources/ui/widget/templates/RtcGitConnector.html
@@ -1,3 +1,1 @@
-<div data-dojo-type="dijit/Dialog" data-dojo-id="mainDialog" title="New Dialog">
-    Testing new dialog.
-</div>
+<div>Testing new dialog.</div>
