Add a dialog to the MainLayout

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -3,4 +3,27 @@
         data-dojo-attach-point="buttonWidget">
     My Button
     </div>
+
+    <div data-dojo-type="dijit/Dialog" data-dojo-id="myDialog" title="Name and Address">
+        <table class="dijitDialogPaneContentArea">
+            <tr>
+                <td><label for="name">Name:</label></td>
+                <td><input data-dojo-type="dijit/form/TextBox" name="name" id="name"></td>
+            </tr>
+            <tr>
+                <td><label for="address">Address:</label></td>
+                <td><input data-dojo-type="dijit/form/TextBox" name="address" id="address"></td>
+            </tr>
+        </table>
+
+        <div class="dijitDialogPaneActionBar">
+            <button data-dojo-type="dijit/form/Button" type="submit" id="ok">OK</button>
+            <button data-dojo-type="dijit/form/Button" type="button" onClick="myDialog.onCancel();"
+                    id="cancel">Cancel</button>
+        </div>
+    </div>
+
+    <button data-dojo-type="dijit/form/Button" type="button" onClick="myDialog.show();">
+        Show me!
+    </button>
 </div>
