--- a/resources/ui/widget/templates/RtcGitConnector.html
+++ b/resources/ui/widget/templates/RtcGitConnector.html
@@ -1,5 +1,5 @@
 <div id="rtcGitConnectorDialog" style="display:none">
     <div data-dojo-type="dijit/Dialog" data-dojo-attach-point="mainDialog" title="Connect with Git" >
-        <div data-dojo-type="MainLayout"></div>
+        <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.mainLayout"></div>
     </div>
 </div>
