Add the select widget with messy styles

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,4 +1,24 @@
 <div class="rtcGitConnectorMainLayout">
+    <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Select a Git Repository</label>
+    <div data-dojo-type="dijit/form/Select" name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList" value="456">
+        <span value="123" style="display: block; width: 100%; text-align: left; padding: .2rem;">
+            <span class="selectListFirstLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; font-weight: bold;">Git Commit Picker</span>
+            <span class="selectListSecondLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; color: gray;">https://github.com/jazz-community/rtc-git-commit-picker</span>
+        </span>
+        <span value="456" style="display: block; width: 100%; text-align: left; padding: .2rem;">
+            <span class="selectListFirstLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; font-weight: bold;"><b>rtc-secure-user-property-store</b></span>
+            <span class="selectListSecondLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; color: gray;">https://github.com/jazz-community/rtc-secure-user-property-store</span>
+        </span>
+        <span value="789" style="display: block; width: 100%; text-align: left; padding: .2rem;">
+            <span class="selectListFirstLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; font-weight: bold;">rtc-create-child-item-plugin</span>
+            <span class="selectListSecondLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; color: gray;">https://github.com/jazz-community/rtc-create-child-item-plugin</span>
+        </span>
+    </div>
+
+    <br />
+    <br />
+    <br />
+
     <div data-dojo-type="dijit/form/Button"
         data-dojo-attach-point="buttonWidget">
     My Button
