--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -1,4 +1,35 @@
 .rtcGitConnectorMainLayout {
+    box-sizing: border-box;
     width: 80vw;
     height: 80vh;
+    margin: 1rem;
+}
+
+.rtcGitConnectorLabelText {
+    display: inline-block;
+    margin-bottom: .5rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.rtcGitConnectorSelectList {
+    display: table;
+    width: 100%;
+}
+
+.rtcGitConnectorSelectList span {
+    display: block;
+    width: 100%;
+    text-align: left;
+    padding: .2rem;
+}
+
+.rtcGitConnectorSelectList .selectListFirstLine {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.rtcGitConnectorSelectList .selectListSecondLine {
+    font-size: 1rem;
+    color: gray;
 }
