--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,17 +1,17 @@
 <div class="rtcGitConnectorMainLayout">
     <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Select a Git Repository</label>
     <div data-dojo-type="dijit/form/Select" name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList" value="456">
-        <span value="123" style="display: block; width: 100%; text-align: left; padding: .2rem;">
-            <span class="selectListFirstLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; font-weight: bold;">Git Commit Picker</span>
-            <span class="selectListSecondLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; color: gray;">https://github.com/jazz-community/rtc-git-commit-picker</span>
+        <span value="123">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Git Commit Picker</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-git-commit-picker</span>
         </span>
-        <span value="456" style="display: block; width: 100%; text-align: left; padding: .2rem;">
-            <span class="selectListFirstLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; font-weight: bold;"><b>rtc-secure-user-property-store</b></span>
-            <span class="selectListSecondLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; color: gray;">https://github.com/jazz-community/rtc-secure-user-property-store</span>
+        <span value="456">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">rtc-secure-user-property-store</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-secure-user-property-store</span>
         </span>
-        <span value="789" style="display: block; width: 100%; text-align: left; padding: .2rem;">
-            <span class="selectListFirstLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; font-weight: bold;">rtc-create-child-item-plugin</span>
-            <span class="selectListSecondLine" style="display: block; width: 100%; text-align: left; padding: .2rem; font-size: 1rem; color: gray;">https://github.com/jazz-community/rtc-create-child-item-plugin</span>
+        <span value="789">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">rtc-create-child-item-plugin</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-create-child-item-plugin</span>
         </span>
     </div>
 
