Set the max height for the drop down

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,6 +1,6 @@
 <div class="rtcGitConnectorMainLayout">
     <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Select a Git Repository</label>
-    <div data-dojo-type="dijit/form/Select" name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList" value="456">
+    <div data-dojo-type="dijit/form/Select" data-dojo-attach-point="selectRegisteredGitRepository" name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList" value="456">
         <span value="123">
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Git Commit Picker</span>
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-git-commit-picker</span>
@@ -10,6 +10,30 @@
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-secure-user-property-store</span>
         </span>
         <span value="789">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">rtc-create-child-item-plugin</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-create-child-item-plugin</span>
+        </span>
+        <span value="234">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Git Commit Picker</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-git-commit-picker</span>
+        </span>
+        <span value="567">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">rtc-secure-user-property-store</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-secure-user-property-store</span>
+        </span>
+        <span value="890">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">rtc-create-child-item-plugin</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-create-child-item-plugin</span>
+        </span>
+        <span value="345">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Git Commit Picker</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-git-commit-picker</span>
+        </span>
+        <span value="678">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">rtc-secure-user-property-store</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-secure-user-property-store</span>
+        </span>
+        <span value="901">
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">rtc-create-child-item-plugin</span>
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-create-child-item-plugin</span>
         </span>
