Add an empty default selection

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,6 +1,10 @@
 <div class="rtcGitConnectorMainLayout">
     <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Select a Git Repository</label>
-    <div data-dojo-type="dijit/form/Select" data-dojo-attach-point="selectRegisteredGitRepository" name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList" value="456">
+    <div data-dojo-type="dijit/form/Select" data-dojo-attach-point="selectRegisteredGitRepository" name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList">
+        <span value="">
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">&nbsp;</span>
+            <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Select a Git Repository...</span>
+        </span>
         <span value="123">
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Git Commit Picker</span>
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">https://github.com/jazz-community/rtc-git-commit-picker</span>
