--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,6 +1,7 @@
 <div class="rtcGitConnectorMainLayout">
     <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Select a Git Repository</label>
-    <div data-dojo-type="dijit/form/Select" data-dojo-attach-point="selectRegisteredGitRepository" name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList">
+    <div data-dojo-type="dijit/form/Select" data-dojo-attach-point="selectRegisteredGitRepository"
+        name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList" value="">
         <span value="">
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">&nbsp;</span>
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Select a Git Repository...</span>
