Remove the placeholder when an option is selected

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -2,7 +2,7 @@
     <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Select a Git Repository</label>
     <div data-dojo-type="dijit/form/Select" data-dojo-attach-point="selectRegisteredGitRepository"
         name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList" value="">
-        <span value="">
+        <span value="" disabled="true">
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">&nbsp;</span>
             <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Select a Git Repository...</span>
         </span>
