Send the onChange function from the select list to the parent widget

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -6,6 +6,12 @@
     <br />
     <br />
 
+    <div id="selectedRegisteredGitRepositoryContainer">No git repository selected</div>
+
+    <br />
+    <br />
+    <br />
+
     <div data-dojo-type="dijit/form/Button"
         data-dojo-attach-point="buttonWidget">
     My Button
