Destroy all dialogs when the widget is closed

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -17,7 +17,7 @@
     My Button
     </div>
 
-    <div data-dojo-type="dijit/Dialog" data-dojo-attach-point="myDialog" title="Name and Address">
+    <div data-dojo-type="dijit/Dialog" data-dojo-attach-point="myDialog" id="mainLayoutMyDialog" title="Name and Address">
         <table class="dijitDialogPaneContentArea">
             <tr>
                 <td><label for="name">Name:</label></td>
