--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,5 +1,6 @@
 <div class="rtcGitConnectorMainLayout">
-    <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectRegisteredGitRepository"
+    <div id="com-siemens-bt-jazz-workitemeditor-rtcGitConnector-ui-widget-selectRegisteredGitRepository"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectRegisteredGitRepository"
         data-dojo-attach-point="selectRegisteredGitRepository"></div>
 
     <br />
