Show a message when no git repositories are found by the service

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -5,5 +5,11 @@
     <br />
     <br />
 
+    <div id="noRegisteredGitRepositoriesContainer" style="display: none;">Please register a git repository in this project area. More info...</div>
+
+    <br />
+    <br />
+    <br />
+
     <div id="selectedRegisteredGitRepositoryContainer">No git repository selected</div>
 </div>
