Display a specific element if there is no repository selected

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -11,5 +11,11 @@
     <br />
     <br />
 
-    <div id="selectedRegisteredGitRepositoryContainer">No git repository selected</div>
+    <div id="noGitRepositorySelectedContainer" style="display: none;">No git repository selected.</div>
+
+    <br />
+    <br />
+    <br />
+
+    <div id="selectedRegisteredGitRepositoryContainer"></div>
 </div>
