Add a temporary warning for Internet Explorer

--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -27,6 +27,10 @@
     margin: 1rem;
 }
 
+#broserIsInternetExplorerContainer {
+    color: red;
+}
+
 .rtcGitConnectorLabelText {
     display: inline-block;
     margin-bottom: .5rem;
