--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,4 +1,7 @@
 <div class="rtcGitConnectorMainLayout">
+    <div id="broserIsInternetExplorerContainer" style="display: none;">
+        <p>Internet Explorer is not supported. Please use <a href="https://www.google.com/chrome/index.html" target="_blank">Google Chrome</a> or <a href="https://www.mozilla.org/en-US/firefox/" target="_blank">Firefox</a> instead.</p>
+    </div>
     <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectRegisteredGitRepository"></div>
 
     <br />
