Remove extra br elements

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,21 +1,13 @@
 <div class="rtcGitConnectorMainLayout">
     <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectRegisteredGitRepository"></div>
 
-    <br />
-    <br />
-    <br />
+    <div id="noRegisteredGitRepositoriesContainer" style="display: none;">
+        <p>Please register a git repository in this project area. More info...</p>
+    </div>
 
-    <div id="noRegisteredGitRepositoriesContainer" style="display: none;">Please register a git repository in this project area. More info...</div>
-
-    <br />
-    <br />
-    <br />
-
-    <div id="noGitRepositorySelectedContainer" style="display: none;">No git repository selected.</div>
-
-    <br />
-    <br />
-    <br />
+    <div id="noGitRepositorySelectedContainer" style="display: none;">
+        <p>No git repository selected.</p>
+    </div>
 
     <div id="selectedRegisteredGitRepositoryContainer"></div>
 </div>
