Add a message for unsupported git hosts

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -9,5 +9,11 @@
         <p>No git repository selected.</p>
     </div>
 
+    <div id="invalidGitRepositoryTypeContainer" style="display: none;">
+        <p>The selected repository is not hosted on a supported platform. Currently only GitHub and GitLab are supported.<br />
+            If the repository is actually hosted on one of the supported platforms, please check the configuration and make sure that the URL is correct.
+        </p>
+    </div>
+
     <div id="selectedRegisteredGitRepositoryContainer"></div>
 </div>
