Show an error when the token service is unavailable

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -15,5 +15,12 @@
         </p>
     </div>
 
+    <div id="couldNotGetAccessTokenContainer" style="display: none;">
+        <p>An error occurred and the access token could not be retrieved from the server. Please refresh the page and try again.<br />
+            This may be caused by the token service being unavailable or incorrectly configured.<br />
+            If this error persists, please contact the Jazz Administrator and inform them of the problem.
+        </p>
+    </div>
+
     <div id="selectedRegisteredGitRepositoryContainer"></div>
 </div>
