Style the error text

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -9,13 +9,13 @@
         <p>No git repository selected.</p>
     </div>
 
-    <div id="invalidGitRepositoryTypeContainer" style="display: none;">
+    <div id="invalidGitRepositoryTypeContainer" class="rtcGitConnectorError" style="display: none;">
         <p>The selected repository is not hosted on a supported platform. Currently only GitHub and GitLab are supported.<br />
             If the repository is actually hosted on one of the supported platforms, please check the configuration and make sure that the URL is correct.
         </p>
     </div>
 
-    <div id="couldNotGetAccessTokenContainer" style="display: none;">
+    <div id="couldNotGetAccessTokenContainer" class="rtcGitConnectorError" style="display: none;">
         <p>An error occurred and the access token could not be retrieved from the server. Please refresh the page and try again.<br />
             This may be caused by the token service being unavailable or incorrectly configured.<br />
             If this error persists, please contact the Jazz Administrator and inform them of the problem.
