Add a dialog for getting the access token

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -23,4 +23,8 @@
     </div>
 
     <div id="selectedRegisteredGitRepositoryContainer"></div>
+
+    <div data-dojo-type="dijit/Dialog" data-dojo-attach-point="getAccessTokenDialog" title="Save access token" id="getAndSaveAccessTokenDialog">
+        <p>Please giff access token...</p>>
+    </div>
 </div>
