Add the SelectLinkType widget to the MainLayout

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,5 +1,7 @@
 <div class="rtcGitConnectorMainLayout">
     <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectRegisteredGitRepository"></div>
+    <br />
+    <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectLinkType"></div>
 
     <div id="noRegisteredGitRepositoriesContainer" style="display: none;">
         <p>Please register a git repository in this project area. More info...</p>
