--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -1,8 +1,8 @@
 <div>
     <label class="rtcGitConnectorLabelText">Choose what to link</label>
-    <div>
-        <div>Commits</div>
-        <div>Issues</div>
-        <div>Requests</div>
+    <div class="rtcGitConnectorSelectLinkType">
+        <div class="linkTypeItem selected">Commits</div>
+        <div class="linkTypeItem">Issues</div>
+        <div class="linkTypeItem">Requests</div>
     </div>
 </div>
