Add data attributes to the link types

--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -1,8 +1,8 @@
-<div>
+<div id="rtcGitConnectorSelectLinkTypeContainer">
     <label class="rtcGitConnectorLabelText">Choose what to link</label>
     <div class="rtcGitConnectorSelectLinkType">
-        <div class="linkTypeItem selected">Commits</div>
-        <div class="linkTypeItem">Issues</div>
-        <div class="linkTypeItem">Requests</div>
+        <div class="linkTypeItem selected" data-link-type="COMMIT">Commits</div>
+        <div class="linkTypeItem" data-link-type="ISSUE">Issues</div>
+        <div class="linkTypeItem" data-link-type="REQUEST">Requests</div>
     </div>
 </div>
