Manually run the startup method for custom widgets in the template

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -1,7 +1,9 @@
 <div class="rtcGitConnectorMainLayout">
-    <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectRegisteredGitRepository"></div>
+    <div data-dojo-attach-point="selectRegisteredGitRepository"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectRegisteredGitRepository"></div>
     <br />
-    <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectLinkType"></div>
+    <div data-dojo-attach-point="selectLinkType"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectLinkType"></div>
 
     <div id="noRegisteredGitRepositoriesContainer" style="display: none;">
         <p>Please register a git repository in this project area. More info...</p>
