Set the selected class on click

--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -1,7 +1,7 @@
 <div id="rtcGitConnectorSelectLinkTypeContainer">
     <label class="rtcGitConnectorLabelText">Choose what to link</label>
     <div class="rtcGitConnectorSelectLinkType">
-        <div class="linkTypeItem selected" data-link-type="COMMIT">Commits</div>
+        <div class="linkTypeItem" data-link-type="COMMIT">Commits</div>
         <div class="linkTypeItem" data-link-type="ISSUE">Issues</div>
         <div class="linkTypeItem" data-link-type="REQUEST">Requests</div>
     </div>
