React when the link type in the store changes

--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -1,8 +1,10 @@
-<div id="rtcGitConnectorSelectLinkTypeContainer">
-    <label class="rtcGitConnectorLabelText">Choose what to link</label>
-    <div class="rtcGitConnectorSelectLinkType">
-        <div class="linkTypeItem" data-link-type="COMMIT">Commits</div>
-        <div class="linkTypeItem" data-link-type="ISSUE">Issues</div>
-        <div class="linkTypeItem" data-link-type="REQUEST">Requests</div>
+<div>
+    <div id="rtcGitConnectorSelectLinkTypeContainer" style="display: none;">
+        <label class="rtcGitConnectorLabelText">Choose what to link</label>
+        <div class="rtcGitConnectorSelectLinkType">
+            <div class="linkTypeItem" data-link-type="COMMIT">Commits</div>
+            <div class="linkTypeItem" data-link-type="ISSUE">Issues</div>
+            <div class="linkTypeItem" data-link-type="REQUEST">Requests</div>
+        </div>
     </div>
 </div>
