Show the error instead of logging it

--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -7,4 +7,6 @@
             <div class="linkTypeItem" data-link-type="REQUEST">Requests</div>
         </div>
     </div>
+
+    <p id="errorLoadingDataFromHostContainer" class="rtcGitConnectorError" style="display: none;"></p>
 </div>
