Import and show the ViewAndSelectCommits widget

--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -9,4 +9,7 @@
     </div>
 
     <p id="errorLoadingDataFromHostContainer" class="rtcGitConnectorError" style="display: none;"></p>
+
+    <div data-dojo-attach-point="viewAndSelectCommits"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectCommits"></div>
 </div>
