--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -12,4 +12,7 @@
 
     <div data-dojo-attach-point="viewAndSelectCommits"
         data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectCommits"></div>
+
+    <div data-dojo-attach-point="viewAndSelectIssues"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectIssues"></div>
 </div>
